Fixed char length label not being right aligned after breaking it

--- a/style.css
+++ b/style.css
@@ -104,7 +104,7 @@ input {
 	grid-column: 1;
 }
 
-.character-length-label {
+#character-length-label {
 	grid-column: -1;
 }
 
